--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Home
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
-            <h1 class="page-title">{{ site.name }}</h1>
+            <h1 class="page-title">{{ site.title }}</h1>
             <h2 class="page-description"> {% if site.description %} {{ site.description }}{% endif %}</h2>
         </div>
     </div>
