--- a/assets/AWS-SAP-examtopics.com.html
+++ b/assets/AWS-SAP-examtopics.com.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+  <title>AWS SAP C01 - 189 Questions</title>
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
+
 </head>
 <body>
 <!-- Topic Title -->
@@ -52563,6 +52566,7 @@ window.onload = (function() {
 		var text = document.createTextNode("Your answer: "); 
         div.appendChild(text);
 		var input = document.createElement('input');  
+                input.style.height = "1.4em";
 		input.onkeyup = (function(e){
 			this.value = this.value.toUpperCase();
 		}); 
