--- a/assets/AWS-SAP-examtopics.com.html
+++ b/assets/AWS-SAP-examtopics.com.html
@@ -1,9 +1,16 @@
 <!doctype html>
 <html>
 <head>
-  <title>AWS SAP C01 - 189 Questions</title>
+  <title>AWS SAP C01 - 629 Questions</title>
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
-
+  <style>
+html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative
+}
+  </style>
 </head>
 <body>
 <!-- Topic Title -->
